<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    android:id="@+id/dog_card_view"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/dog_photo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_dog_photo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dog_name"
            android:layout_toRightOf="@+id/dog_photo"
            android:layout_alignParentTop="true"
            android:transitionName="@string/transition_dog_name"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dog_size"
            android:layout_toRightOf="@id/dog_photo"
            android:layout_below="@+id/dog_name"
            android:transitionName="@string/transition_dog_size"
            android:paddingRight="6dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dog_age"
            android:layout_toRightOf="@+id/dog_size"
            android:layout_below="@+id/dog_name"
            android:paddingRight="6dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dog_sex"
            android:layout_toRightOf="@+id/dog_age"
            android:transitionName="@string/transition_dog_sex"
            android:layout_below="@id/dog_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dog_breed"
            android:transitionName="@string/transition_dog_breed"
            android:layout_toRightOf="@id/dog_photo"
            android:layout_below="@+id/dog_size"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>
</LinearLayout>