<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bryonnicoson.wishbone.DogDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

            <ImageView
                android:id="@+id/dog_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_dog_photo" />

            <TextView
                android:id="@+id/dog_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/dog_photo"
                android:transitionName="@string/transition_dog_name"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/dog_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dog_name"
                android:layout_toRightOf="@id/dog_photo"
                android:transitionName="@string/transition_dog_size"
                android:paddingRight="6dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dog_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dog_name"
                android:layout_toRightOf="@+id/dog_size"
                android:transitionName="@string/transition_dog_age"
                android:paddingRight="6dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dog_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dog_name"
                android:transitionName="@string/transition_dog_sex"
                android:layout_toRightOf="@+id/dog_age"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dog_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dog_size"
                android:transitionName="@string/transition_dog_breed"
                android:layout_toRightOf="@id/dog_photo"
                android:textSize="18sp"/>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_dog_detail" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
