<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bryonnicoson.wishbone.ScrollingActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="9dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lead"
                android:textSize="18sp"
                android:text="I want to rescue a ..."/>

            <RadioGroup
                android:id="@+id/radio_group_sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lead"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_f"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:textSize="18sp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_f"/>

                <RadioButton
                    android:id="@+id/radio_m"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:textSize="18sp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_m"/>

                <RadioButton
                    android:id="@+id/radio_fm"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:textSize="18sp"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_fm"/>

            </RadioGroup>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox_small"
                android:text="@string/checkbox_small"
                android:layout_below="@id/radio_group_sex"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="9dp"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox_medium"
                android:text="@string/checkbox_medium"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group_sex"
                android:layout_toRightOf="@id/checkbox_small"
                android:checked="true"
                android:padding="9dp"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox_large"
                android:text="@string/checkbox_large"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group_sex"
                android:layout_toRightOf="@id/checkbox_medium"
                android:checked="true"
                android:padding="9dp"
                android:textSize="18sp" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_scrolling" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
